Updates from Overleaf

--- a/bib/topic1.bib
+++ b/bib/topic1.bib
@@ -333,20 +333,50 @@ isbn = {9783902734204},
 doi = {10.2507/29th.daaam.proceedings.125}
 }
 
-@article{compPM,
-author = {Batyuk, Anatoliy and Voityshyn, Volodymyr},
-year = {2018},
-month = {11},
-pages = {22-36},
-title = {Process Mining: Applied Discipline and Software Implementations},
-journal = {Naukovi Visti Nacionalnogo Tehnicnogo Universitetu Ukraini Kiivskij Politehnicnij Institut},
-doi = {10.20535/1810-0546.2018.5.146178}
+@article{Compinformative,
+  title={An informative and comparative study of process mining tools},
+  author={Devi, Aruna T},
+  journal={Int. J. Sci. Eng. Res},
+  volume={8},
+  number={5},
+  pages={8--10},
+  year={2006}
 }
 
-@inproceedings{ ComparativeEO,
-  title={Comparative Evaluation of Process Mining Tools},
-  author={Musie Kebede and Marlon Dumas},
-  year={2015}
+@Inbook{Schobel2017,
+author="Schobel, Johannes
+and Reichert, Manfred",
+editor="Grambow, Gregor
+and Oberhauser, Roy
+and Reichert, Manfred",
+title="Business Process Intelligence Tools",
+bookTitle="Advances in Intelligent Process-Aware Information Systems: Concepts, Methods, and Technologies",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="225--249",
+abstract="This chapter analyzes contemporary software tools enabling Business Process Intelligence (BPI). BPI is one of the emerging trends in enterprise computing, which allows companies and organizations to maximize the value derived from their business processes. Moreover, BPI constitutes an umbrella term that summarizes different software tools, methods and best practices for real-time process analytics. The chapter presents an analysis of the features as well as the strengths and weaknesses of contemporary BPI tools along two characteristic application strategies of modern enterprises.",
+isbn="978-3-319-52181-7",
+doi="10.1007/978-3-319-52181-7_9",
+url="https://doi.org/10.1007/978-3-319-52181-7_9"
+}
+
+@phdthesis{compPM,
+author = {Erling, Christian},
+year = {2019},
+month = {02},
+pages = {},
+title = {Vergleich und Evaluation von Process Mining Software},
+doi = {10.13140/RG.2.2.11181.13280/1}
+}
+
+
+
+@phdthesis{verstraete,
+  title={Process mining in practice: Comparative study of process mining software},
+  author={Verstraete, D},
+  year={2014},
+  school={MS thesis, Faculty of Economics and Business Administration, Ghent~…}
 }
 
 @misc{wrro141683,
