--- a/setup.tex
+++ b/setup.tex
@@ -49,6 +49,7 @@
     \fancyhead[RE,RO]{ \rightmark}
     \fancyfoot[CO,CE] {\thepage}
 
+\usepackage{tabularx}
 
 \renewcommand{\figurename}{Abbildung}
 \renewcommand{\contentsname}{Inhaltsverzeichnis}
