Updates from Overleaf

--- a/setup.tex
+++ b/setup.tex
@@ -57,6 +57,7 @@
 \renewcommand{\bibname}{Literaturverzeichnis}
 \renewcommand{\chaptername}{Kapitel}
 \renewcommand{\listfigurename}{Abbildungsverzeichnis}
+\renewcommand{\listtablename}{Tabellenverzeichnis}
 
     %==========================================
     % You might not need the following packages, I only included them as they
