--- a/bib/topic1.bib
+++ b/bib/topic1.bib
@@ -404,6 +404,27 @@ journal = {Sensors (Basel, Switzerland)},
 doi = {10.3390/s131115434}
 }
 
+@InProceedings{transMiner,
+author="van der Aalst, Wil M. P.
+and van Dongen, Boudewijn F.",
+editor="Jensen, Kurt
+and van der Aalst, Wil M. P.
+and Balbo, Gianfranco
+and Koutny, Maciej
+and Wolf, Karsten",
+title="Discovering Petri Nets from Event Logs",
+booktitle="Transactions on Petri Nets and Other Models of Concurrency VII",
+year="2013",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="372--422",
+abstract="As information systems are becoming more and more intertwined with the operational processes they support, multitudes of events are recorded by today's information systems. The goal of process mining is to use such event data to extract process related information, e.g., to automatically discover a process model by observing events recorded by some system or to check the conformance of a given model by comparing it with reality. In this article, we focus on process discovery, i.e., extracting a process model from an event log. We focus on Petri nets as a representation language, because of the concurrent and unstructured nature of real-life processes. The goal is to introduce several approaches to discover Petri nets from event data (notably the $\alpha$-algorithm, state-based regions, and language-based regions). Moreover, important requirements for process discovery are discussed. For example, process mining is only meaningful if one can deal with incompleteness (only a fraction of all possible behavior is observed) and noise (one would like to abstract from infrequent random behavior). These requirements reveal significant challenges for future research in this domain.",
+isbn="978-3-642-38143-0"
+}
+
+
+
+
 @Article{Jaroucheh2011,
 author="Jaroucheh, Zakwan
 and Liu, Xiaodong
@@ -421,6 +442,98 @@ doi="10.1007/s12652-010-0038-7",
 url="https://doi.org/10.1007/s12652-010-0038-7"
 }
 
+@inproceedings{adl1,
+  title={Discovering process models of activities of daily living from sensors},
+  author={Cameranesi, Marco and Diamantini, Claudia and Potena, Domenico},
+  booktitle={International Conference on Business Process Management},
+  pages={285--297},
+  year={2017},
+  organization={Springer}
+}
 
+@article{adl2,
+  title={Context-based similarity measure on human behavior pattern analysis},
+  author={Prabono, Aria Ghora and Lee, Seok-Lyong and Yahya, Bernardo Nugroho},
+  journal={Soft Computing},
+  volume={23},
+  number={14},
+  pages={5455--5467},
+  year={2019},
+  publisher={Springer}
+}
 
+@article{adl3,
+  title={Mining insights from weakly-structured event data},
+  author={Tax, Niek},
+  journal={arXiv preprint arXiv:1909.01421},
+  year={2019}
+}
+
+@article{adl4,
+  title={A novel human autonomy assessment system},
+  author={Munstermann, Marco and Stevens, Torsten and Luther, Wolfram},
+  journal={Sensors},
+  volume={12},
+  number={6},
+  pages={7828--7854},
+  year={2012},
+  publisher={Molecular Diversity Preservation International}
+}
+
+@article{adl5,
+  title={SAMDY--TECHNOLOGIES TO SUPPORT “CARE ON DEMAND”},
+  author={Munstermann, M},
+  journal={Fraunhofer},
+  pages={81}
+}
+
+@inproceedings{adl6,
+  title={Mining process model descriptions of daily life through event abstraction},
+  author={Tax, Niek and Sidorova, Natalia and Haakma, Reinder and van der Aalst, W},
+  booktitle={Proceedings of SAI Intelligent Systems Conference},
+  pages={83--104},
+  year={2016},
+  organization={Springer}
+}
+
+@article{adl7,
+  title={Recompiling learning processes from event logs},
+  author={Vidal, Juan C and V{\'a}zquez-Barreiros, Borja and Lama, Manuel and Mucientes, Manuel},
+  journal={Knowledge-Based Systems},
+  volume={100},
+  pages={160--174},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{adl8,
+  title={Event Abstraction for Process Mining Using Supervised Learning Techniques},
+  author={van der Aalst, Wil MP},
+  booktitle={Proceedings of SAI Intelligent Systems Conference (IntelliSys) 2016},
+  volume={1},
+  pages={251},
+  year={2017},
+  organization={Springer}
+}
+
+@article{adl9,
+  title={Visual process maps: a visualization tool for discovering habits in smart homes},
+  author={Leotta, Francesco and Mecella, Massimo and Sora, Daniele},
+  journal={Journal of Ambient Intelligence and Humanized Computing},
+  pages={1--29},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{adl10,
+  title={Data Mining for Behavioural Changes and Monitoring Requirements in Residential Healthcare},
+  author={Kostermans, BB and Van Gorp, PME and Wilbik, AM and Weij, H and de Lijster, M},
+  year={2017}
+}
+
+@article{adl11,
+  title={Prozess-Mining und Prozessbewertung zur Verbesserung klinischer Workflows im Umfeld bilderzeugender F{\"a}cher},
+  author={Lang, Martin},
+  year={2008}
+}
 \end{comment}
