--- a/setup.tex
+++ b/setup.tex
@@ -58,7 +58,6 @@
 \renewcommand{\chaptername}{Kapitel}
 \renewcommand{\listfigurename}{Abbildungsverzeichnis}
 \renewcommand{\listtablename}{Tabellenverzeichnis}
-
     %==========================================
     % You might not need the following packages, I only included them as they
     % are needed for the example floats
@@ -139,6 +138,7 @@
 
 %___________________________________________________________
 \usepackage{listings}
+\renewcommand{\lstlistingname}{Programmcode}
 
 \usepackage{color}
 \definecolor{gray}{rgb}{0.4,0.4,0.4}
