--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -2,7 +2,7 @@
 % ngerman is needed for hyphenation if the thesis contains parts written in German
 % BCOR is binding correction
 % if you'd rather have a one sided thesis, add `onside' to the documentclass
-\documentclass[12pt, a4paper, BCOR=10mm, english, ngerman]{scrbook}
+\documentclass[12pt, a4paper, BCOR=10mm, english, ngerman, oneside]{scrbook}
 
 % include all packages and define commands in setup.tex
 \input{setup}
