Updates from Overleaf

--- a/bib/topic1.bib
+++ b/bib/topic1.bib
@@ -362,7 +362,7 @@ bookTitle="Advances in Intelligent Process-Aware Information Systems: Concepts, 
 year="2017",
 publisher="Springer International Publishing",
 address="Cham",
-pages="225--249",
+pages="233--246",
 abstract="This chapter analyzes contemporary software tools enabling Business Process Intelligence (BPI). BPI is one of the emerging trends in enterprise computing, which allows companies and organizations to maximize the value derived from their business processes. Moreover, BPI constitutes an umbrella term that summarizes different software tools, methods and best practices for real-time process analytics. The chapter presents an analysis of the features as well as the strengths and weaknesses of contemporary BPI tools along two characteristic application strategies of modern enterprises.",
 isbn="978-3-319-52181-7",
 doi="10.1007/978-3-319-52181-7_9",
@@ -430,6 +430,12 @@ abstract="As information systems are becoming more and more intertwined with the
 isbn="978-3-642-38143-0"
 }
 
+@book{munster,
+  title={Technisch unterst{\"u}tzte Pflege von morgen: Innovative Aktivit{\"a}tserkennung und Verhaltensermittlung durch ambiente Sensorik},
+  author={Munstermann, Marco},
+  year={2015},
+  publisher={Springer-Verlag}
+}
 
 
 
