Updates from Overleaf

--- a/bib/topic1.bib
+++ b/bib/topic1.bib
@@ -12,7 +12,7 @@
 @book{PMinAction,
   title = {Process Mining},
   subtitle = {Data Science in Action},
-  pages	= {49,50,148,163-185, 201-205,222-233, 325-352},
+  pages	= {49,50,52,55-59,148,163-185, 201-205,222-233,243, 325-352},
   author = {Aalst, Wil M. P.},
   year = {2016},
   PUBLISHER = {Springer},
